report4/doc/implementatiemodel/lv/landbouwgebruiksperceel/v0.0.1/oslo-converter-ea.report.md
#||# oslo-converter-ea for diagram Landbouwgebruiksperceel

#||# -------------------------------------

2026-06-02T12:04:48.089Z info: Connector Model:Landbouwgebruiksperceel:GeregistreerdeOrganisatie:(GeregistreerdeOrganisatie -> Organisatie) is not an association with a source role. Ignoring this connector.

2026-06-02T12:04:48.091Z info: Connector Model:Landbouwgebruiksperceel:GeregistreerdPersoon:(GeregistreerdPersoon -> Persoon) is not an association with a source role. Ignoring this connector.

2026-06-02T12:04:48.092Z info: Connector Model:Landbouwgebruiksperceel:Persoon:(Persoon -> Agent) is not an association with a source role. Ignoring this connector.

2026-06-02T12:04:48.092Z info: Connector Model:Landbouwgebruiksperceel:Organisatie:(Organisatie -> Agent) is not an association with a source role. Ignoring this connector.

2026-06-02T12:04:48.093Z info: Connector Model:Landbouwgebruiksperceel:Exploitatie:(Exploitatie -> Explotatiebeslag) is not an association with a source role. Ignoring this connector.

2026-06-02T12:04:48.093Z info: Connector Model:Landbouwgebruiksperceel:Explotatiebeslag:(Explotatiebeslag -> Gebruiksperceel) is not an association with a source role. Ignoring this connector.

2026-06-02T12:04:48.093Z info: Connector Model:Landbouwgebruiksperceel:Belgif-Auth:Activiteittype-NACEBEL2025:(Activiteittype-NACEBEL2025 -> Activiteittype-v1) is not an association with a source role. Ignoring this connector.

2026-06-02T12:04:48.093Z info: Connector Model:Landbouwgebruiksperceel:LandbouwActiviteit-v1:(LandbouwActiviteit-v1 -> Activiteittype-v1) is not an association with a source role. Ignoring this connector.

2026-06-02T12:04:48.094Z warn: [PackageConverterHandler]: No value found for tag "baseURI" in package (OSLO-Template:GNSS-DCAT-AP). Using fallback URI (http://todo.com/) instead.

2026-06-02T12:04:48.095Z warn: [PackageConverterHandler]: No value found for tag "baseURI" in package (OSLO-Template:EU-IT6). Using fallback URI (http://todo.com/) instead.

2026-06-02T12:04:48.095Z warn: [PackageConverterHandler]: No value found for tag "baseURI" in package (OSLO-Template:W3C-DQV). Using fallback URI (http://todo.com/) instead.

2026-06-02T12:04:48.095Z warn: [PackageConverterHandler]: No value found for tag "baseURI" in package (OSLO-Template:IFC-BIM). Using fallback URI (http://todo.com/) instead.

2026-06-02T12:04:48.095Z warn: [PackageConverterHandler]: No value found for tag "baseURI" in package (OSLO-Template:OSLO-Template). Using fallback URI (http://todo.com/) instead.

2026-06-02T12:04:48.095Z warn: [PackageConverterHandler]: No value found for tag "baseURI" in package (Landbouwgebruiksperceel:Landbouwperceel). Using fallback URI (http://todo.com/) instead.

2026-06-02T12:04:48.096Z warn: [PackageConverterHandler]: No value found for tag "baseURI" in package (Landbouwgebruiksperceel:Landbouwperceel:W3C-Person). Using fallback URI (http://todo.com/) instead.

2026-06-02T12:04:48.096Z warn: [PackageConverterHandler]: No value found for tag "baseURI" in package (Landbouwgebruiksperceel:Landbouwperceel:dcterms). Using fallback URI (http://todo.com/) instead.

2026-06-02T12:04:48.096Z warn: [PackageConverterHandler]: No value found for tag "baseURI" in package (Landbouwgebruiksperceel:Landbouwperceel:W3C-Time). Using fallback URI (http://todo.com/) instead.

2026-06-02T12:04:48.096Z warn: [PackageConverterHandler]: No value found for tag "baseURI" in package (Landbouwgebruiksperceel:Landbouwperceel:LV). Using fallback URI (http://todo.com/) instead.

2026-06-02T12:04:48.096Z warn: [PackageConverterHandler]: No value found for tag "baseURI" in package (Landbouwgebruiksperceel:Landbouwperceel:REGORG). Using fallback URI (http://todo.com/) instead.

2026-06-02T12:04:48.096Z info: [PackageConverterHandler]: No value found for tag "baseURI" in package (Model). Using fallback URI (http://todo.com/) instead.

2026-06-02T12:04:48.096Z warn: [PackageConverterHandler]: No value found for tag "baseURI" in package (Model:Landbouwgebruiksperceel). Using fallback URI (http://todo.com/) instead.

2026-06-02T12:04:48.096Z warn: [PackageConverterHandler]: No value found for tag "baseURI" in package (Model:Landbouwgebruiksperceel:OSLO-Template). Using fallback URI (http://todo.com/) instead.

2026-06-02T12:04:48.097Z warn: [PackageConverterHandler]: No value found for tag "baseURI" in package (Model:Landbouwgebruiksperceel:OSLO-Template:OSLO-Codelijst). Using fallback URI (http://todo.com/) instead.

2026-06-02T12:04:48.097Z warn: [PackageConverterHandler]: No value found for tag "baseURI" in package (Model:Landbouwgebruiksperceel:OSLO-Template:W3C-Person). Using fallback URI (http://todo.com/) instead.

2026-06-02T12:04:48.097Z warn: [PackageConverterHandler]: No value found for tag "baseURI" in package (Landbouwgebruiksperceel:Landbouwperceel:ORG). Using fallback URI (http://todo.com/) instead.

2026-06-02T12:04:48.097Z warn: [PackageConverterHandler]: No value found for tag "baseURI" in package (Landbouwgebruiksperceel:Landbouwperceel:INSPIRE-LandCover). Using fallback URI (http://todo.com/) instead.

2026-06-02T12:04:48.097Z warn: [PackageConverterHandler]: No value found for tag "baseURI" in package (Landbouwgebruiksperceel:Landbouwperceel:LADM). Using fallback URI (http://todo.com/) instead.

2026-06-02T12:04:48.097Z warn: [PackageConverterHandler]: No value found for tag "baseURI" in package (Model:Landbouwgebruiksperceel:VKBO). Using fallback URI (http://todo.com/) instead.

2026-06-02T12:04:48.102Z warn: [ConnectorConverterHandler]: Connector (exploitant) does not have a package tag defined. Trying to determine the correct base URI based on the source and destination objects their package.

2026-06-02T12:04:48.103Z warn: [ConnectorConverterHandler]: Connector (exploitatie) does not have a package tag defined. Trying to determine the correct base URI based on the source and destination objects their package.

2026-06-02T12:04:48.103Z warn: [ConnectorConverterHandler]: Connector (beslag) does not have a package tag defined. Trying to determine the correct base URI based on the source and destination objects their package.

2026-06-02T12:04:48.103Z warn: [ConnectorConverterHandler]: Connector (perceel) does not have a package tag defined. Trying to determine the correct base URI based on the source and destination objects their package.

#||# -------------------------------------

